added some quarter buttons with hardcoded dates

--- a/src/ng-quick-date-default-theme.less
+++ b/src/ng-quick-date-default-theme.less
@@ -109,6 +109,10 @@ table.quickdate-calendar {
   margin: 3px 1px 0;
 }
 
+.quickdate-popup-quarters {
+  margin: 3px 1px 0;
+}
+
 .quickdate-clear {
   display: inline-block;
   padding: 2px 4px;
