--- a/src/ng-quick-date.less
+++ b/src/ng-quick-date.less
@@ -93,6 +93,11 @@ table.quickdate-calendar {
   }
 }
 
+.quickdate-popup-quarters {
+  text-align: left;
+  display: block;
+}
+
 .quickdate-popup-footer {
   text-align: right;
   display: block;
