added dynamic, overridable quarters

--- a/src/ng-quick-date-default-theme.less
+++ b/src/ng-quick-date-default-theme.less
@@ -111,6 +111,8 @@ table.quickdate-calendar {
 
 .quickdate-popup-quarters {
   margin: 3px 1px 0;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 
 .quickdate-clear {
